--- a/form_html/checkout.html
+++ b/form_html/checkout.html
@@ -4,7 +4,7 @@
 <title>Kamoney Checkout Example</title>
 </head>
 <body>
-<form id="form_enviar_contato" name="form_enviar_contato" action="http://127.0.0.1/portal/merchant/checkout" method="POST">
+<form action="https://www.kamoney.com.br/merchant/checkout" method="POST">
 <strong>Valor:</strong>
 <br>
 <input required="required" type="hidden" name="amount" id="amount" value="546.25"/>
